--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
+title: khairatil aini
+email: ratir9030@gmail.com
+description: Nama saya khairatil aini, saya mahasiswa di politeknik lhokseumawe, saya mengambil jurusan teknologi informasi dan komputer.
 url: 'https://khairatilaini.github.io'
 
 plugins:
